<resources>

    <!-- General -->
    <string name="app_name">Questr</string>

    <!-- Login -->
    <string name="login_title">Questr</string>
    <string name="login_button">Login</string>
    <string name="login_failure">Login failed.</string>

    <!-- Drawer-->
    <string name="drawer_title">Questr</string>
    <string name="nav_drawer_general">General</string>
    <string name="nav_drawer_profile">Profile</string>
    <string name="nav_drawer_quests">Quests</string>
    <string name="nav_drawer_completed">Completed</string>
    <string name="nav_drawer_accepted">Accepted</string>
    <string name="nav_drawer_issued">Issued</string>
    <string name="nav_drawer_find_quests">Find Quests</string>
    <string name="nav_drawer_heroes">Heroes</string>
    <string name="nav_drawer_find_heroes">Find Heroes</string>
    <string name="nav_drawer_other">Miscellaneous</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="open_drawer_content_description">Open Drawer</string>
    <string name="close_drawer_content_description">Close Drawer</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_name">Name:</string>
    <string name="profile_experience">Experience:</string>
    <string name="profile_quests_completed">Completed Quests:</string>
    <string name="profile_quests_accepted">Accepted Quests:</string>
    <string name="profile_quests_issued">Issued Quests:</string>

    <!-- Quest -->
    <string name="quest_title">Quest</string>
    <string name="quest_id">ID:</string>
    <string name="quest_name">Name:</string>
    <string name="quest_description">Description:</string>
    <string name="quest_requirement">Requirement:</string>
    <string name="quest_experience_reward">Experience Reward:</string>
    <string name="quest_is_active">Active Quest:</string>
    <string name="quest_quest_giver">Quest Giver:</string>

    <!-- Hero -->
    <string name="hero_title">Hero</string>
    <string name="hero_id">ID:</string>
    <string name="hero_name">Name:</string>
    <string name="hero_experience">Experience:</string>
    <string name="hero_quests_completed">Completed Quests:</string>
    <string name="hero_quests_accepted">Accepted Quests:</string>
    <string name="hero_quests_issued">Issued Quests:</string>

    <!-- Completed -->
    <string name="empty_completed">No completed quests?\nYou should try harder.</string>

    <!-- Accepted -->
    <string name="empty_accepted">No accepted quests?\nCoward.</string>

    <!-- Issued -->
    <string name="empty_issued">No issued quests?\nLet the peasants do quests for you!</string>
    <string name="menu_issued_issue">Issue Quest</string>

    <!-- Find Quests -->
    <string name="empty_find_quests">No quests found.</string>

    <!-- Find Heroes -->
    <string name="empty_find_heroes">No heroes found.</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_menu_logout">Logout</string>

    <!-- Dialogs -->
    <string name="dialog_licenses_title"><b>Open-Source Licenses</b></string>
    <string name="dialog_about_content"><b>Questr</b>\nCopyright \u00A9 2015\n\nNobel Yoo\nMatthew Compton\nAll Rights Reserved</string>
    <string name="dialog_connection_content"><b>No Network Connection</b>\n\nPlease check your Internet connection.</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure?</string>
    <string name="dialog_logout_toast">You have been logged out.</string>

</resources>
